renkko/media/sonarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  labels:
    app: sonarr
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
      - image: lscr.io/linuxserver/sonarr:4.0.17
        name: sonarr
        volumeMounts:
        - name: config
          mountPath: /config
        - name: media
          mountPath: /media
          subPath: library
        - name: media
          mountPath: /downloads
          subPath: downloads
        ports:
        - containerPort: 8989
        resources:
          limits:
            cpu: "4"
            memory: 2048Mi
            ephemeral-storage: 2Gi
          requests:
            cpu: 100m
            memory: 256Mi
      securityContext:
        fsGroup: 1000
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: sonarr-config
      - name: media
        hostPath:
          path: /var/mnt/media
          type: Directory
